tests/ui/cve_2020_35873/cve_2020_35873.stderr
error: use a pointer from `std::ffi::CString` after dropped
  --> tests/ui/cve_2020_35873/cve_2020_35873.rs:32:25
   |
LL |         unsafe { check!(ffi::sqlite3session_attach(self.sess, table)) };
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the `std::ffi::CString` value is dropped here
  --> tests/ui/cve_2020_35873/cve_2020_35873.rs:28:9
   |
LL |         } else {
   |         ^

error: aborting due to 1 previous error

